--- a/MERN Works/Foodcard/Index.html
+++ b/MERN Works/Foodcard/Index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Card</title>
 </head>
+
 <body>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,24 +14,19 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Graduate&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <section class="py-10 font-[roboto]">
     <section class="py-10 font-[roboto] bg-[#F9FBFE]">
         <div class="2xl:container mx-auto">
             <div class="w-[90%] mx-auto grid-cols-1">
                 <p class="font-bold text-[28px] leading-[34px] py-2 text-[#6c8091]">Explore Menu</p>
             </div>
             <div class="w-[90%] mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-col justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-2xl"></div>
                 <div class="rounded-2xl bg-white shadow-xl">
                     <div class="flex flex-col justify-center items-center p-5"><img
                             src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
                             class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
                         View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-arrow-right">
@@ -38,75 +35,13 @@
                         </svg>
                     </p>
                 </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
-                <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
-                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
-                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-arrow-right">
-                            <path d="M5 12h14" />
-                            <path d="m12 5 7 7-7 7" />
-                        </svg>
-                        </svg></p>
-                </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
-                <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
-                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
-                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-arrow-right">
-                            <path d="M5 12h14" />
-                            <path d="m12 5 7 7-7 7" />
-                        </svg>
-                        </svg></p>
-                </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
-                <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
-                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
-                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-arrow-right">
-                            <path d="M5 12h14" />
-                            <path d="m12 5 7 7-7 7" />
-                        </svg>
-                        </svg></p>
-                </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"></div><img
-                        src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                        class="p-6 rounded-xl">
                 <div class="rounded-2xl bg-white shadow-xl">
                     <div class="flex flex-col justify-center items-center p-5"><img
-                        src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                        class="rounded-2xl"></div>
-
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
+                            class="rounded-2xl"></div>
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
                         View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-arrow-right">
@@ -115,65 +50,98 @@
                         </svg>
                     </p>
                 </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
                 <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
+                    <div class="flex flex-col justify-center items-center p-5"><img
                             src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
                             class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
                         View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-arrow-right">
                             <path d="M5 12h14" />
                             <path d="m12 5 7 7-7 7" />
                         </svg>
-                        </svg></p>
+                    </p>
                 </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
                 <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
+                    <div class="flex flex-col justify-center items-center p-5"><img
                             src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
                             class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
                         View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-arrow-right">
                             <path d="M5 12h14" />
                             <path d="m12 5 7 7-7 7" />
                         </svg>
-                        </svg></p>
+                    </p>
                 </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
                 <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
+                    <div class="flex flex-col justify-center items-center p-5"><img
                             src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
                             class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
                         View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-arrow-right">
                             <path d="M5 12h14" />
                             <path d="m12 5 7 7-7 7" />
                         </svg>
-                        </svg></p>
+                    </p>
+                </div>
+                <div class="rounded-2xl bg-white shadow-xl">
+                    <div class="flex flex-col justify-center items-center p-5"><img
+                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
+                            class="rounded-2xl"></div>
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-arrow-right">
+                            <path d="M5 12h14" />
+                            <path d="m12 5 7 7-7 7" />
+                        </svg>
+                    </p>
+                </div>
+                <div class="rounded-2xl bg-white shadow-xl">
+                    <div class="flex flex-col justify-center items-center p-5"><img
+                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
+                            class="rounded-2xl"></div>
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-arrow-right">
+                            <path d="M5 12h14" />
+                            <path d="m12 5 7 7-7 7" />
+                        </svg>
+                    </p>
+                </div>
+                <div class="rounded-2xl bg-white shadow-xl">
+                    <div class="flex flex-col justify-center items-center p-5"><img
+                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
+                            class="rounded-2xl"></div>
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-arrow-right">
+                            <path d="M5 12h14" />
+                            <path d="m12 5 7 7-7 7" />
+                        </svg>
+                    </p>
                 </div>
             </div>
-        </div>
     </section>
 </body>
+
 </html>
