--- a/MERN Works/Food Store/Index.html
+++ b/MERN Works/Food Store/Index.html
@@ -60,17 +60,13 @@
                 <p class="font-bold text-[28px] leading-[34px] py-2 text-black">Explore Menu</p>
             </div>
             <div class="w-[90%] mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-col justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-2xl"></div>
                 <div class="rounded-2xl bg-white shadow-xl">
                     <div class="flex flex-col justify-center items-center p-5"><img
                             src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
                             class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
                         View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-arrow-right">
@@ -79,74 +75,13 @@
                         </svg>
                     </p>
                 </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
                 <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
+                    <div class="flex flex-col justify-center items-center p-5"><img
                             src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
                             class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
-                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
-                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-arrow-right">
-                            <path d="M5 12h14" />
-                            <path d="m12 5 7 7-7 7" />
-                        </svg>
-                        </svg></p>
-                </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
-                <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
-                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
-                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-arrow-right">
-                            <path d="M5 12h14" />
-                            <path d="m12 5 7 7-7 7" />
-                        </svg>
-                        </svg></p>
-                </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
-                <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
-                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
-                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-arrow-right">
-                            <path d="M5 12h14" />
-                            <path d="m12 5 7 7-7 7" />
-                        </svg>
-                        </svg></p>
-                </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"></div><img
-                        src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                        class="p-6 rounded-xl">
-                <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
-                        src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                        class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
                         View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-arrow-right">
@@ -155,62 +90,95 @@
                         </svg>
                     </p>
                 </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
                 <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
+                    <div class="flex flex-col justify-center items-center p-5"><img
                             src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
                             class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
                         View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-arrow-right">
                             <path d="M5 12h14" />
                             <path d="m12 5 7 7-7 7" />
                         </svg>
-                        </svg></p>
+                    </p>
                 </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
                 <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
+                    <div class="flex flex-col justify-center items-center p-5"><img
                             src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
                             class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
                         View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-arrow-right">
                             <path d="M5 12h14" />
                             <path d="m12 5 7 7-7 7" />
                         </svg>
-                        </svg></p>
+                    </p>
                 </div>
-                <div class="rounded-2xl shadow-xl">
-                    <div class="flex flex-row justify-center items-center"><img
-                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
-                            class="p-6 rounded-xl"></div>
                 <div class="rounded-2xl bg-white shadow-xl">
-                    <div class="flex flex-row justify-center items-center p-5"><img
+                    <div class="flex flex-col justify-center items-center p-5"><img
                             src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
                             class="rounded-2xl"></div>
-                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters</p>
-                    <p
-                        class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
                         View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                             fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="lucide lucide-arrow-right">
                             <path d="M5 12h14" />
                             <path d="m12 5 7 7-7 7" />
                         </svg>
-                        </svg></p>
+                    </p>
+                </div>
+                <div class="rounded-2xl bg-white shadow-xl">
+                    <div class="flex flex-col justify-center items-center p-5"><img
+                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
+                            class="rounded-2xl"></div>
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-arrow-right">
+                            <path d="M5 12h14" />
+                            <path d="m12 5 7 7-7 7" />
+                        </svg>
+                    </p>
+                </div>
+                <div class="rounded-2xl bg-white shadow-xl">
+                    <div class="flex flex-col justify-center items-center p-5"><img
+                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
+                            class="rounded-2xl"></div>
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-arrow-right">
+                            <path d="M5 12h14" />
+                            <path d="m12 5 7 7-7 7" />
+                        </svg>
+                    </p>
+                </div>
+                <div class="rounded-2xl bg-white shadow-xl">
+                    <div class="flex flex-col justify-center items-center p-5"><img
+                            src="https://ik.imagekit.io/g3noxl5cd/MERN%20Stack/Food%20Store/Menu%201.webp" alt="Food 1"
+                            class="rounded-2xl"></div>
+                    <p class="font-medium text-[18px] leading-[22px] text-[#323F4B] pl-4 py-2">Non-Veg Starters
+                    </p>
+                    <p class="font-medium text-[14px] leading-[21px] text-[#E8C708] pl-4 py-2 flex flex-row gap-1 hover:text-blue-300 hover:underline hover:cursor-pointer">
+                        View All <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                            fill="none" stroke="#e8c708" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-arrow-right">
+                            <path d="M5 12h14" />
+                            <path d="m12 5 7 7-7 7" />
+                        </svg>
+                    </p>
                 </div>
             </div>
         </div>
